[package]
name = "authlogic"
description = "Authentication logic for Actix Web applications"
version = "0.3.0"
edition = "2021"
license = "MIT"
keywords = ["actix", "auth", "session", "password"]
categories = ["authentication", "web-programming"]
repository = "https://github.com/kaya3/authlogic-rs"
readme = "README.md"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.6.0-rc.8"
base64 = "0.22.1"
constant_time_eq = "0.5.0"
diesel = { version = "2.2.0", optional = true }
diesel-derive-newtype = { version = "2.1.2", optional = true }
log = "0.4.29"
password-hash = { version = "0.6.1", features = ["rand_core"] }
pbkdf2 = { version = "0.13.0", features = ["sha2", "phc"], optional = true }
rand = { version = "0.10.1", features = ["thread_rng"] }
scrypt = { version = "0.12.0", features = ["phc"], optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.11.0"
sqlx = { version = "0.8.3", optional = true }
thiserror = "2.0.18"
trait-variant = "0.1.2"
zeroize = "1.8.2"

[features]
diesel = ["dep:diesel", "dep:diesel-derive-newtype"]
pbkdf2 = ["dep:pbkdf2"]
scrypt = ["dep:scrypt"]
sqlx = ["dep:sqlx"]
